--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,17 +1,19 @@
 <%= form_for(@task) do |f| %>
   <div class="form-group">
     <%= f.label :title %>
-    <%= f.text_field :title %>
-  </div>
+    <%= f.text_field :title, class:"form-control" %>
 
   <div class="form-group">
     <%= f.label :details %>
-    <%= f.text_field :details %>
+    <%= f.text_field :details, class:"form-control" %>
   </div>
 
-  <%= f.label :completed %>
-  <%= f.text_field :completed %>
+  <div class="form-group">
+    <%= f.check_box :completed %>
+    <%= f.label :completed %>
+  </div>
 
   <%= f.submit class: 'btn btn-primary' %>
+  </div>
 <% end %>
 
