--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -8,4 +8,4 @@
     <% end %>
   </p>
 <% end %>
-<p><i class="fas fa-plus"></i> <%= link_to "Add a new task", new_path %></p>
+<p><i class="fas fa-plus"></i> <%= link_to "Add a new task", new_task_path %></p>
